{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 56,
  "lineage": "91038991-6fa2-35ee-9fcc-e93e2deba1a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04dd23e62ed049936",
            "arn": "arn:aws:ec2:us-west-2:597647611698:instance/i-0d45bb195ba9c10d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d45bb195ba9c10d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e50ac213830ac300",
            "private_dns": "ip-10-0-0-212.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.212",
            "public_ip": "35.94.177.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03922484ddb90cd59",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09e2e637382276210"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a7c9fce46d6fb4b",
            "tags": {
              "Name": "Server A"
            },
            "tags_all": {
              "Name": "Server A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e2e637382276210"
            ]
          },
          "dependencies": [
            "aws_security_group.server_sg",
            "aws_subnet.subnet_a_1",
            "aws_vpc.vpc_a",
            "data.aws_key_pair.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04dd23e62ed049936",
            "arn": "arn:aws:ec2:us-west-2:597647611698:instance/i-0031995527f2770ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0031995527f2770ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c88c0ba483b5c690",
            "private_dns": "ip-10-1-0-98.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.98",
            "public_ip": "35.85.55.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09943d8aa51ea7290",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0797be2055eb720c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090aec3598562de91",
            "tags": {
              "Name": "Server B"
            },
            "tags_all": {
              "Name": "Server B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0797be2055eb720c4"
            ]
          },
          "dependencies": [
            "aws_security_group.server_sg_b",
            "aws_subnet.subnet_b_1",
            "aws_vpc.vpc_b",
            "data.aws_key_pair.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04dd23e62ed049936",
            "arn": "arn:aws:ec2:us-west-2:597647611698:instance/i-0c4a5f4fcb0f2d6c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4a5f4fcb0f2d6c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d545962311fb2075",
            "private_dns": "ip-10-2-0-81.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.81",
            "public_ip": "54.191.61.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b1e8c57734a4a1bf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a8e9430cfbd3b00a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5580f25f2b8a9de",
            "tags": {
              "Name": "Server C"
            },
            "tags_all": {
              "Name": "Server C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8e9430cfbd3b00a"
            ]
          },
          "dependencies": [
            "aws_security_group.server_sg_c",
            "aws_subnet.subnet_c_1",
            "aws_vpc.vpc_c",
            "data.aws_key_pair.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:internet-gateway/igw-091195ec83686e205",
            "id": "igw-091195ec83686e205",
            "owner_id": "597647611698",
            "tags": {
              "Name": "internet gateway A"
            },
            "tags_all": {
              "Name": "internet gateway A"
            },
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:internet-gateway/igw-05023842907dc1cd5",
            "id": "igw-05023842907dc1cd5",
            "owner_id": "597647611698",
            "tags": {
              "Name": "igw B"
            },
            "tags_all": {
              "Name": "igw B"
            },
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:internet-gateway/igw-0a8724828e27c345b",
            "id": "igw-0a8724828e27c345b",
            "owner_id": "597647611698",
            "tags": {
              "Name": "igw C"
            },
            "tags_all": {
              "Name": "igw C"
            },
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:route-table/rtb-0af833958de352ce1",
            "id": "rtb-0af833958de352ce1",
            "owner_id": "597647611698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091195ec83686e205",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00289244437ef23d5"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01a0a7801d5ebfc46"
              }
            ],
            "tags": {
              "Name": "Route table A"
            },
            "tags_all": {
              "Name": "Route table A"
            },
            "timeouts": null,
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c",
            "aws_vpc_peering_connection.connection_a_to_b",
            "aws_vpc_peering_connection.connection_a_to_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:route-table/rtb-0f49972b0e50700e5",
            "id": "rtb-0f49972b0e50700e5",
            "owner_id": "597647611698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05023842907dc1cd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-02094b9b39fb753e3"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0a69d312e5ffd1e58"
              }
            ],
            "tags": {
              "Name": "route table B"
            },
            "tags_all": {
              "Name": "route table B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_b",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c",
            "aws_vpc_peering_connection.connection_b_to_a",
            "aws_vpc_peering_connection.connection_b_to_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:route-table/rtb-0b72d1d6ab836bf51",
            "id": "rtb-0b72d1d6ab836bf51",
            "owner_id": "597647611698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8724828e27c345b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0415e2d25e20acb86"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0feed8628b6411b07"
              }
            ],
            "tags": {
              "Name": "route table C"
            },
            "tags_all": {
              "Name": "route table C"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_c",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c",
            "aws_vpc_peering_connection.connection_c_to_a",
            "aws_vpc_peering_connection.connection_c_to_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b57c44758ebd597d",
            "route_table_id": "rtb-0af833958de352ce1",
            "subnet_id": "subnet-02a7c9fce46d6fb4b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet_a_1",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c",
            "aws_vpc_peering_connection.connection_a_to_b",
            "aws_vpc_peering_connection.connection_a_to_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061283d6a55e83fc9",
            "route_table_id": "rtb-0f49972b0e50700e5",
            "subnet_id": "subnet-090aec3598562de91"
          },
          "dependencies": [
            "aws_internet_gateway.igw_b",
            "aws_route_table.route_table_b",
            "aws_subnet.subnet_b_1",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c",
            "aws_vpc_peering_connection.connection_b_to_a",
            "aws_vpc_peering_connection.connection_b_to_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04137f6636049f239",
            "route_table_id": "rtb-0b72d1d6ab836bf51",
            "subnet_id": "subnet-0f5580f25f2b8a9de"
          },
          "dependencies": [
            "aws_internet_gateway.igw_c",
            "aws_route_table.route_table_c",
            "aws_subnet.subnet_c_1",
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c",
            "aws_vpc_peering_connection.connection_c_to_a",
            "aws_vpc_peering_connection.connection_c_to_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:security-group/sg-09e2e637382276210",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e2e637382276210",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server-a-security-group",
            "name_prefix": "",
            "owner_id": "597647611698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:security-group/sg-0797be2055eb720c4",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0797be2055eb720c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server-b-security-group",
            "name_prefix": "",
            "owner_id": "597647611698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:security-group/sg-0a8e9430cfbd3b00a",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8e9430cfbd3b00a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server-c-security-group",
            "name_prefix": "",
            "owner_id": "597647611698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-02a7c9fce46d6fb4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7c9fce46d6fb4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet A"
            },
            "tags_all": {
              "Name": "public subnet A"
            },
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-07190208ae268365f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07190208ae268365f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet A"
            },
            "tags_all": {
              "Name": "private subnet A"
            },
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-090aec3598562de91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090aec3598562de91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet A"
            },
            "tags_all": {
              "Name": "public subnet A"
            },
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-0da635362334e1160",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da635362334e1160",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet B"
            },
            "tags_all": {
              "Name": "private subnet B"
            },
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-0f5580f25f2b8a9de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5580f25f2b8a9de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet C"
            },
            "tags_all": {
              "Name": "public subnet C"
            },
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-0a231d38643f174d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a231d38643f174d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet C"
            },
            "tags_all": {
              "Name": "private subnet C"
            },
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:vpc/vpc-058afcb8ff80fd953",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2a0329adbc89926",
            "default_route_table_id": "rtb-0c69f43db07cc81f5",
            "default_security_group_id": "sg-0247964426d62a2f8",
            "dhcp_options_id": "dopt-015a245ee1d217a01",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058afcb8ff80fd953",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c69f43db07cc81f5",
            "owner_id": "597647611698",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "Name": "VPC A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:vpc/vpc-06a10228411e4f7b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e93e3e9634999dd8",
            "default_route_table_id": "rtb-0f7ad38debe752e9d",
            "default_security_group_id": "sg-04bbd76935f525f67",
            "dhcp_options_id": "dopt-015a245ee1d217a01",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a10228411e4f7b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7ad38debe752e9d",
            "owner_id": "597647611698",
            "tags": {
              "Name": "VPC B"
            },
            "tags_all": {
              "Name": "VPC B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:vpc/vpc-08ffdf79ed587cde8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0c175691dc9739725",
            "default_route_table_id": "rtb-0e1e73a5c1143bd08",
            "default_security_group_id": "sg-01c87283d50bca0a4",
            "dhcp_options_id": "dopt-015a245ee1d217a01",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ffdf79ed587cde8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1e73a5c1143bd08",
            "owner_id": "597647611698",
            "tags": {
              "Name": "VPC C"
            },
            "tags_all": {
              "Name": "VPC C"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "connection_a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-00289244437ef23d5",
            "peer_owner_id": "597647611698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-06a10228411e4f7b3",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peering connection A to B"
            },
            "tags_all": {
              "Name": "Peering connection A to B"
            },
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "connection_a_to_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-01a0a7801d5ebfc46",
            "peer_owner_id": "597647611698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-08ffdf79ed587cde8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peering connection A to C"
            },
            "tags_all": {
              "Name": "Peering connection A to C"
            },
            "vpc_id": "vpc-058afcb8ff80fd953"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "connection_b_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-02094b9b39fb753e3",
            "peer_owner_id": "597647611698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-058afcb8ff80fd953",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peering connection B to A"
            },
            "tags_all": {
              "Name": "Peering connection B to A"
            },
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "connection_b_to_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0a69d312e5ffd1e58",
            "peer_owner_id": "597647611698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-08ffdf79ed587cde8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peering connection B to C"
            },
            "tags_all": {
              "Name": "Peering connection B to C"
            },
            "vpc_id": "vpc-06a10228411e4f7b3"
          },
          "dependencies": [
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "connection_c_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0415e2d25e20acb86",
            "peer_owner_id": "597647611698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-058afcb8ff80fd953",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peering connection C to A"
            },
            "tags_all": {
              "Name": "Peering connection C to A"
            },
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "connection_c_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0feed8628b6411b07",
            "peer_owner_id": "597647611698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-06a10228411e4f7b3",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peering connection C to B"
            },
            "tags_all": {
              "Name": "Peering connection C to B"
            },
            "vpc_id": "vpc-08ffdf79ed587cde8"
          },
          "dependencies": [
            "aws_vpc.vpc_b",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    }
  ]
}